--- a/config/corne.conf
+++ b/config/corne.conf
@@ -7,3 +7,5 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
