--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,11 +1,19 @@
-# Uncomment the following lines to enable the Corne RGB Underglow
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
+# USB
+CONFIG_ZMK_USB=n
 
-# Uncomment the following line to enable the Corne OLED Display
+# Bluetooth
+CONFIG_BT_MAX_CONN=4
+CONFIG_BT_MAX_PAIRED=4
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
+
+# Sleep
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_TIMEOUT=30000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=1800
+
+# Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
-CONFIG_ZMK_WIDGET_WPM_STATUS=y
-CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
